# kieker-lang-pack-c

./: .gitignore  AUTHORS  Jenkinsfile  Makefile.am  README.md  configure.ac  create-debian.sh  libtool
aspectC++/kieker/: CMakeLists.txt  abstract_aspect.c  abstract_aspect.h  controller.c  controller.h  event_aspect.c  event_aspect.h  kieker.h
aspectC++/kieker/Aspect/: event_trace_abstract.ah  event_trace_total.ah  event_trace_total_deinit.ah  event_trace_total_init.ah  event_trace_total_process.ah
aspectC++/kieker/Excluder/: exclude_classes.c
aspectC++/kieker/Record/: CMakeLists.txt  operation_event.c  operation_event.h  operation_execution_record.c  operation_execution_record.h
aspectC++/kieker/Trace/: trace.c  trace.h
aspectC++/kieker/Util/: CMakeLists.txt  binary_serializer.c  kieker_error.c  measure_time.c  measure_time.h  socket.h
examples/instrument-example/: Makefile.am  instrument.c
libkieker/common/record/database/: Makefile.am  after_database_event.c  after_database_event.h  before_database_event.c  before_database_event.h  database_failed_event.c  database_failed_event.h
libkieker/common/record/flow/thread/: Makefile.am  after_failed_thread_based_event.c  after_failed_thread_based_event.h  after_thread_based_event.c  after_thread_based_event.h  before_thread_based_event.c  before_thread_based_event.h
libkieker/common/record/flow/trace/: Makefile.am  application_trace_metadata.c  application_trace_metadata.h  before_received_remote_event.c  before_received_remote_event.h  before_sent_remote_event.c  before_sent_remote_event.h  construction_event.c  construction_event.h  trace_metadata.c  trace_metadata.h
libkieker/common/record/flow/trace/concurrency/: Makefile.am  join_event.c  join_event.h  split_event.c  split_event.h
libkieker/common/record/flow/trace/concurrency/monitor/: Makefile.am  monitor_entry_event.c  monitor_entry_event.h  monitor_exit_event.c  monitor_exit_event.h  monitor_notify_all_event.c  monitor_notify_all_event.h  monitor_notify_event.c  monitor_notify_event.h  monitor_request_event.c  monitor_request_event.h  monitor_wait_event.c  monitor_wait_event.h
libkieker/common/record/flow/trace/operation/: after_operation_event.c  after_operation_event.h  after_operation_failed_event.c  after_operation_failed_event.h  before_operation_event.c  before_operation_event.h  call_operation_event.c  call_operation_event.h
libkieker/common/record/flow/trace/operation/constructor/: Makefile.am  after_constructor_event.c  (+7 more)
libkieker/common/record/jvm/: Makefile.am  class_loading_record.c  class_loading_record.h  compilation_record.c  compilation_record.h  g_c_record.c  g_c_record.h  memory_record.c  memory_record.h  threads_status_record.c  threads_status_record.h  uptime_record.c  uptime_record.h
libkieker/common/record/misc/: Makefile.am  empty_record.c  empty_record.h  host_application_meta_data.c  host_application_meta_data.h  kieker_metadata_record.c  kieker_metadata_record.h  thread_meta_data.c  thread_meta_data.h  timestamp_record.c  timestamp_record.h
libkieker/common/record/remotecontrol/: Makefile.am  activation_event.c  activation_event.h  activation_parameter_event.c  activation_parameter_event.h  add_parameter_value_event.c  add_parameter_value_event.h  deactivation_event.c  deactivation_event.h  remove_parameter_value_event.c  remove_parameter_value_event.h  update_parameter_event.c  update_parameter_event.h
libkieker/common/utilities/: Makefile.am  kieker_error.c  kieker_error.h  kieker_serialize.c  measure_time.c
libkieker/monitoring/probes/: Makefile.am  kieker_probe_gcc_profiling.c  kieker_probe_gcc_profiling.h  kieker_probe_plain.c  kieker_probe_plain.h
libkieker/monitoring/probes/aspect/: Makefile.am  abstract_aspect.c  abstract_aspect.h  event_aspect.c  event_aspect.h  event_trace_kirat_abstract.ah  event_trace_withoutMain.ah  event_trace_withoutMain_Init_Deinit.ah  exclude_classes.c  exclude_classes.h  monitoring.ah  trace.c  trace.h
libkieker/monitoring/utilities/: Makefile.am  kieker_error.c  kieker_error.h  kieker_string.c  measure_time.c
source/libkieker/: Makefile-leaf.template  Makefile.am  make-am.sh
source/libkieker/common/record/controlflow/: Makefile.am  branching_record.h  operation_execution_record.h
source/libkieker/common/record/database/: before_database_event.c  before_database_event.h  database_failed_event.c
source/libkieker/common/record/flow/: Makefile.am
source/libkieker/common/record/flow/trace/: application_trace_metadata.c  before_received_remote_event.h  construction_event.c  trace_metadata.h
source/libkieker/common/record/jvm/: class_loading_record.c  class_loading_record.h  g_c_record.h  memory_record.c  threads_status_record.h  uptime_record.c  uptime_record.h
source/libkieker/common/record/misc/: empty_record.h  thread_meta_data.h  timestamp_record.c  timestamp_record.h
source/libkieker/common/record/remotecontrol/: activation_event.c  activation_parameter_event.h  add_parameter_value_event.c  add_parameter_value_event.h  remove_parameter_value_event.h
source/libkieker/common/record/system/: Makefile.am  c_p_u_utilization_record.h  load_average_record.c  load_average_record.h  network_utilization_record.h
source/libkieker/common/utilities/: kieker_serialize.c
source/libkieker/include/: Makefile.am  kieker.h  kieker_serialize.h
source/libkieker/include/aspectc++/: abstract_event_trace.ah  abstract_trace_kirat.ah  trace_kirat_monitoring.ah  trace_kirat_total.ah  trace_kirat_withoutMain_Init_Deinit.ah
source/libkieker/monitoring/controller/: Makefile.am  kieker_adaptive_monitoring.h  kieker_controller.c  kieker_controller_internal.h  kieker_io.c  kieker_trace.c  kieker_trace.h
source/libkieker/monitoring/probes/: kieker_probe_events.c  kieker_probe_events.h  kieker_probe_plain.c  kieker_probe_plain.h
source/libkieker/monitoring/probes/aspect/: Makefile.am  controlflow.c  controlflow.h  event_trace.c  event_trace.h
source/libkieker/monitoring/utilities/: Makefile.am  kieker_string.h
tests/: Makefile.am  kieker_controller_test.c  kieker_trace_test.c
(+125 files in other folders)
