noinst_LTLIBRARIES = libprobes.la

#######################################
# Build information for each library

# Sources for libkieker
libprobes_la_SOURCES = 

# Linker options libTestProgram
libprobes_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libprobes_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

