noinst_LTLIBRARIES = libinclude.la

#######################################
# Build information for each library

# Sources for libkieker
libinclude_la_SOURCES = *.c

# Linker options libTestProgram
libinclude_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libinclude_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

