noinst_LTLIBRARIES = libdatabase.la

#######################################
# Build information for each library

# Sources for libkieker
libdatabase_la_SOURCES = after_database_event.c before_database_event.c database_failed_event.c

# Linker options libTestProgram
libdatabase_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libdatabase_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

