noinst_LTLIBRARIES = libmisc.la

#######################################
# Build information for each library

# Sources for libkieker
libmisc_la_SOURCES = empty_record.c host_application_meta_data.c kieker_metadata_record.c thread_meta_data.c timestamp_record.c

# Linker options libTestProgram
libmisc_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libmisc_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

