noinst_LTLIBRARIES = libremotecontrol.la

#######################################
# Build information for each library

# Sources for libkieker
libremotecontrol_la_SOURCES = activation_event.c activation_parameter_event.c add_parameter_value_event.c deactivation_event.c remove_parameter_value_event.c update_parameter_event.c

# Linker options libTestProgram
libremotecontrol_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libremotecontrol_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

