noinst_LTLIBRARIES = libthread.la

#######################################
# Build information for each library

# Sources for libkieker
libthread_la_SOURCES = after_failed_thread_based_event.c after_thread_based_event.c before_thread_based_event.c

# Linker options libTestProgram
libthread_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libthread_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

