noinst_LTLIBRARIES = libcontrolflow.la

#######################################
# Build information for each library

# Sources for libkieker
libcontrolflow_la_SOURCES = branching_record.c operation_execution_record.c

# Linker options libTestProgram
libcontrolflow_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libcontrolflow_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

