noinst_LTLIBRARIES = libsystem.la

#######################################
# Build information for each library

# Sources for libkieker
libsystem_la_SOURCES = c_p_u_utilization_record.c disk_usage_record.c load_average_record.c mem_swap_usage_record.c network_utilization_record.c resource_utilization_record.c

# Linker options libTestProgram
libsystem_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libsystem_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

