noinst_LTLIBRARIES = libobject.la

#######################################
# Build information for each library

# Sources for libkieker
libobject_la_SOURCES = after_constructor_failed_object_event.c after_constructor_object_event.c before_constructor_object_event.c before_constructor_object_interface_event.c call_constructor_object_event.c

# Linker options libTestProgram
libobject_la_LDFLAGS =

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libobject_la_CPPFLAGS = -I$(top_srcdir)/libkieker/include

